# HopeGit

./: .vimrc  Makefile  README.md  calculate_clock.c  get_random.c
algorithm/merge/: merge_sort.c  merge_sort1.cc  merge_sort2.c  merge_sort3.c
algorithm/raft/: raft.c  raft.h
async_io/: boss_async_utils.h
async_io/internal/: boss_async_base.h  boss_async_io.cc  boss_async_io.h  boss_io_uring.cc  boss_io_uring.h
c++_test/basic/: args_test.cc  args_test1.cc  args_test2.cc  five_rule.cc  forward_test.cc  friend_class.cc  ptr_test.cc  ptr_test1.cc  raii_test.cc  thread_pool.cc  thread_pool1.cc  virtual_class.cc
c++_test/multi_thread/: test1.cc  test2.cc
c++_test/thread_pool/: a.out
c++_test/uringfs/: CMakeLists.txt  ufs.cc
c++_test/uringfs/bk/: memfs  uringfs.cc  uringfs.cc.bk  uringfs.h  uringfs_ll.c  uringfs_main.c
c++_test/uringfs/common/: log.cc  log.h
c++_test/uringfs/meta/: boss_meta.cc  boss_meta_test.cc  boss_meta_util.cc  metadata.pb.cc  metadata.proto
c++_test/uringfs/meta/inc/: boss_meta.h  metadata.pb.h  metadata_utils.h
c++_test/uringfs/storage/: iouring.cc
c++_test/uringfs/storage/inc/: iouring.h
c++_test/uringfs/test/: iouring_test.cc
c_test/bit/: test_bit.c
c_test/callback/: a.c  b.c  main
c_test/epoll/: Makefile  test_client  test_epoll_server.c  test_server
c_test/libevent/: a.out  client  libevent-2.1.11-stable.tar.bz2  test  test_client  test_client_libevent.cc  test_libevent.c  test_libevent1.c  test_server_libevent.cc
c_test/mem/: a.out  test_jmalloc.c  test_jmalloc1.c  test_mem.c  test_mmap.c
c_test/select/: Makefile  test_select  test_select.c
c_test/share_memory/: a.out  read  share_mutex_read.c  share_mutex_write1.c  share_mutex_write2.c  write  write1
c_test/timer/: a.out  test_timer.c  timer.c  timer.h
cmake/1CMake/: CMakeLists.txt
cmake/1CMake/cmake/: glog.cmake
cmake/1CMake/src/: main.cc
cmake/2CMake/: CMakeLists.txt
cmake/3CMake/: CMakeLists.txt
cmake/3CMake/src/: CMakeLists.txt  main.c  main1.c
cmake/4CMake/: CMakeLists.txt
cmake/4CMake/src/: main.c
cmake/CmakeTest/: CMakeLists.txt  main  main.cpp
cmake/libCMake/: CMakeLists.txt
cmake/libCMaketest/: CMakeLists.txt
cmake/project/starockserver/: CMakeLists.txt  alStarocksServer.cc  alStarocksServer.h
cmake/project/starockserver/cjson/: CMakeLists.txt
cmake/project/starockserver/logger/: CMakeLists.txt
cmake/project/starockserver/logger/inc/: elog.h  elog_cfg.h
cmake/project/starockserver/logger/plugins/file/: elog_file.c  elog_file.h  elog_file_cfg.h  elog_file_port.c
cmake/project/starockserver/logger/plugins/flash/: elog_flash_cfg.h  elog_flash_port.c
cmake/project/starockserver/logger/src/: elog.c  elog_buf.c  elog_utils.c
cmake/project/starockserver/src/: starocks_api_face_snaps.cc  starocks_api_person.cc  starocks_api_persons_info.cc  starocks_api_temp_data.cc  util.cc  util.h
cmake/project/starockserver/src/starocks/person_db/: IDENTITY  LOG  LOG.old.1629358279223467  LOG.old.1629358279301120  LOG.old.1629358302384140  LOG.old.1629361576620276  LOG.old.1629368604775310  MANIFEST-000035  OPTIONS-000033
cmake/project/starockserver/src/starocks/snap_db/: IDENTITY  LOG  LOG.old.1629358279162275  LOG.old.1629358279341639  LOG.old.1629358302439385  LOG.old.1629361576666282  LOG.old.1629368604813244  MANIFEST-000039  OPTIONS-000042
cmake/project/starockserver/src/starocks/temp_db/: IDENTITY  LOG  LOG.old.1629358279268141  LOG.old.1629358279414976  LOG.old.1629358302504369  LOG.old.1629361576733402  LOG.old.1629368604862582  MANIFEST-000031  OPTIONS-000034
db/c_test/: Makefile  libtaos.so.1.6.5.6  stardb.h  test_stardb.c
db/go_test/: README  stardb.go
db/python_test/: README  read_example.py
db/starkv/: Makefile  build.sh  stardb.event
db/starkv_server/: CMakeLists.txt
db/starkv_server/liblogger/: CMakeLists.txt
db/starkv_server/liblogger/inc/: elog_cfg.h
db/starkv_server/liblogger/plugins/file/: elog_file_cfg.h
db/starkv_server/liblogger/plugins/flash/: elog_flash.c
db/starkv_server/liblogger/port/: elog_port.c
db/starkv_server/liblogger/src/: elog_async.c
db/starkv_server/librpc/: CMakeLists.txt
db/starkv_server/libstarkv/: CMakeLists.txt
db/starkv_server/libutil/: CMakeLists.txt
db/starkv_server/libutil/include/: thread.h  thread_pool.h  tools.h
db/starkv_server/libutil/src/: thread_pool.cpp
db/starkv_server/packaging/: release.sh
db/starkv_server/packaging/cfg/: starkv.cfg
db/starkv_server/packaging/deb/: alStarkvServer  makedeb.sh
db/starkv_server/packaging/deb/DEBIAN/: control  postinst  preinst  prerm
db/starkv_server/packaging/docker/: Dockerfile  dockerbuild.sh
db/starkv_server/packaging/rpm/: makerpm.sh  stardbd  tdengine.spec
db/starkv_server/packaging/tools/: get_os.sh  get_version.sh  install.sh  install_client.sh  make_install.sh  makeclient.sh  makepkg.sh  post.sh  preun.sh  release_note  remove.sh  remove_client.sh  repair_link.sh
db/starkv_server/src/client/: engine_client.cc  engine_client.h  shell_client.cc  shell_client.cpp  shell_client.h  shell_client_driver.cc  starkv_client.cc
db/starkv_server/src/common/: crytocpp.cpp  ds_log.cpp  tools.cpp
db/starkv_server/src/os/: os.cc  os.h  version.cc
db/starkv_server/src/proto/: db_engine.pb.cc  db_engine.pb.h  db_engine.proto  gen.sh
db/starkv_server/src/rpc/: io_thread.cpp  io_thread.h  libev_connector.cpp  libev_connector.h  pub_define.h  rpc_channel.cpp  rpc_channel.h  rpc_msg.pb.cc  rpc_msg.pb.h  rpc_msg_gen.sh  rpc_server.cpp  rpc_server.h  rpc_util.cpp  rpc_util.h  socket_util.cpp  socket_util.h  thread_pool.cpp  thread_pool.h
db/starkv_server/src/rpc/test/: test_server.cpp  testsocket_client.cpp  testsocket_server.cpp
db/starkv_server/src/server/: starkv_server.cc  starkv_server.cpp  starkv_server.h  starkv_service.cc  starkv_service.h  starkv_store_impl.cc  starkv_store_impl.h
example1/debug/: Makefile
example1/src/: Makefile
example2/CPE_54_08/: CPE_54_08.cpp  Makefile
mmap/: a.out  mmap.c
mydeb/: README
mydeb/DEBIAN/: control  (+2 more)
rpc/: client  server
tools/: log
util/: config.h
(+226 files in other folders)
