cmake_minimum_required(VERSION 3.5)
project(demo)
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
option(WWW1 "print one message" ON)
option(WWW2 "print another message" ON)
if (WWW1)
    add_compile_options(-DWWW1)
endif()

if (WWW2)
    add_compile_options(-DWWW2)
endif()
aux_source_directory (src SRC_LIST)
include_directories (include)
add_executable (main ${SRC_LIST})